--- a/BFWProjectHandM/.project
+++ b/BFWProjectHandM/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BFWProjectHandM</name>
+	<name>PageObjectModelNike</name>
 	<comment></comment>
 	<projects>
 	</projects>
